2009-03-26  Petr Mikulik  <mikulik@physics.muni.cz>

	* src/history.c (write_history_list): Indexing istart from 1 otherwise
	"history" command (without arguments) does not work.

2009-03-24  Ethan A Merritt  <merritt@u.washington.edu>

	* src/datafile.c:  Fix breakage if configured --disable-binary-data-file
	(Lucas Hart)

2009-03-24  Petr Mikulik  <mikulik@physics.muni.cz>

	* src/pm3d.c (pm3d_plot): The quadrangles are only prepared but not
	drawn by this routine in pm3d depthorder mode, thus set_color() should
	not be called.

2009-03-23  Ethan A Merritt  <merritt@u.washington.edu>

	* src/win/wgraph.c (Wnd_exec_event): Clean the 2nd parameter sent to
	gp_exec_event after a keypress. This should fix the problem leading to
	"protocol error" messages.

2009-03-18  Ethan A Merritt  <merritt@u.washington.edu>

	* src/wxterminal/gp_cairo.c (gp_cairo_draw_text): Determine the vertical
	placement of text based on the average value found when the font was
	selected, rather than on the specific height of this text fragment.
	Otherwise successive fragments with different height produce an uneven
	baseline.  Bug #2661664

	* src/axis.c (make_tics): Trap case where there were insufficient data
	to determine axis range. E.g. "set view map; set pm3d; splot {0,1};".

2009-03-15  Ethan A Merritt  <merritt@u.washington.edu>

	Increment patchlevel, version strings, documentation dates, and NEWS in
	preparation for release of version 4.2.5

2009-03-13  Ethan A Merritt  <merritt@u.washington.edu>

	* demo/datastrings.dem demo/histograms.dem demo/histograms:
	Switch demos to use the documented syntax "... title columnhead(2)"
	rather than the deprecated "... title 2"

2009-03-05  Ethan A Merritt  <merritt@u.washington.edu>

	* src/graphics.c: Fix assignment of fill patterns to plot boxes and key
	for columnstacked histograms.  Bug #2664732

2009-03-04  Ethan A Merritt  <merritt@u.washington.edu>

	* src/graphics.c (find_maxl_keys do_plot): The first entry in a list of